Update 18th May

--- a/3d-cad-services/index.html
+++ b/3d-cad-services/index.html
@@ -86,13 +86,9 @@
                 <div class="col-lg-5">
                     <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Interior Design Rendering</h3>
                     <h1 class="display-4 mb-3">Transforming <span class="text-primary">Spaces</span> Elevating <span class="text-primary">Lives</span> </h1>
-                    <p>What does your ideal space truly feel like? At Tech Triq, we believe that the answers lie within you.
+                    <p>At Tech Triq, we unlock your potential and translate it into breathtaking interior design renderings. Our process starts by understanding your aspirations, needs, and style. Then, our designers use cutting-edge technology to bring your vision to life, revealing every nuance.
                     <br>
-                    <br>
-                    We specialize in unlocking that potential and translating it into breathtaking interior design renderings. We don’t simply show you rooms; we provoke a sense of possibility. Our process begins with a deep conversation to understand your aspirations, your needs, and your unique style. Then, our skilled designers utilize cutting-edge rendering technology to bring your vision to life, revealing every nuance of texture, color, and light. We challenge conventional design norms, always seeking to create spaces that are not just aesthetically pleasing, but deeply engaging and emotionally resonant. 
-                    <br>
-                    <br>
-                    Are you seeking a space that fosters creativity, promotes serenity, or strengthens connections?  Let us help you realize your dream one stunning rendering at a time
+                    We challenge conventions to create spaces that are not just aesthetically pleasing, but deeply engaging and emotionally resonant. Whether you seek creativity, serenity, or stronger connections, let us help you realize your dream one stunning rendering at a time.
                     </p>
                 </div>
             </div>
@@ -104,13 +100,7 @@
                 <div class="col-lg-5">
                     <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Exterior Design Rendering</h3>
                     <h1 class="display-4 mb-3">Designing the <span class="text-primary">Dream</span><br>From the <span class="text-primary">Outside In</span></h1>
-                    <p>The foundation of a remarkable home begins with a meticulously crafted exterior. Our exterior design renderings provide a comprehensive visual representation of your future property.
-                    <br>
-                    <br>
-                    We utilize advanced 3D modeling techniques to precisely portray the building’s form, materials, and integration with its environment. Our process involves a thorough assessment of site conditions, local regulations, and your specific design preferences. We meticulously detail everything from rooflines and window placements to hardscaping, landscaping, and exterior lighting.
-                    <br>
-                    <br>
-                    This level of precision ensures that the final result aligns perfectly with your vision – minimizing costly revisions and maximizing the overall quality of your design.
+                    <p>Our exterior design renderings provide a comprehensive 3D visualization of your future home. Using advanced modeling, we precisely depict the building's form, materials, and integration with the surrounding environment. This ensures the final result perfectly aligns with your vision, minimizing revisions and maximizing the overall design quality.
                     </p>
                 </div>
                 <div class="col-lg-7">
@@ -132,13 +122,7 @@
                 <div class="col-lg-5">
                     <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Walkthrough Video</h3>
                     <h1 class="display-4 mb-3">See your <span class="text-primary">Vision</span><br>In <span class="text-primary">Motion</span> </h1>
-                    <p>Our Walkthrough videos present the quality materials, intelligent layout, and overall aesthetic that will define your environment.
-                    <br>
-                    <br>
-                    Observe the considered use of textures, the warmth of natural stone, the sophistication of polished metal, the comfort of luxurious fabrics, all expertly rendered to evoke a sense of premium quality and refined elegance. The careful placement of furniture and accessories highlights the design's functionality and flow, creating a space that is both beautiful and practical.
-                    <br>
-                    <br>
-                    Beyond the visual elements, the rendering communicates a commitment to sophisticated design and a thoughtful approach to creating an environment that enhances productivity, relaxation, or lifestyle. It’s a detailed preview that allows you to fully appreciate the design's impact and quality.
+                    <p>Our walkthrough videos showcase the quality materials, intelligent layout, and overall aesthetic that will define your environment. Observe the considered use of textures, natural stone, polished metal, and luxurious fabrics - all expertly rendered to evoke a sense of premium quality and refined elegance. These detailed previews allow you to fully appreciate the design's impact and quality before it's realized.
                     </p>
                 </div>
             </div>
@@ -150,11 +134,7 @@
                 <div class="col-lg-5">
                     <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Location A/V</h3>
                     <h1 class="display-4 mb-3">Highlight the <span class="text-primary">Unique</span> Selling Points of your <span class="text-primary">Project</span> </h1>
-                    <p>Location AV transcends traditional renderings. It unveils your property within its true context. We don't just show you the building, we reveal how it will integrate seamlessly with its surroundings. Utilizing advanced visualization technology, we seamlessly overlay a realistic depiction of the landscape, topography, and key features. Showcasing the natural beauty and urban context that define your location.
-                    <br>
-                    <br>
-                    Observe the interplay of light and shadow across the terrain, the effect of neighboring structures, and the flow of traffic, all rendered with exceptional accuracy. Location AV provides a comprehensive understanding of the property’s context, allowing you to appreciate its strategic advantages, neighborhood character, and potential. See how sunlight will bathe the facade at different times of day, and envision the views available from key vantage points.
-                    </p>
+                    <p>Location A/V transcends traditional renderings by unveiling your property within its true context. Using advanced visualization, we seamlessly overlay a realistic depiction of the landscape, topography, and key features, showcasing the natural beauty and urban context that define the location</p>
                 </div>
                 <div class="col-lg-7">
                     <video class="content-video w-100 h-100" autoplay loop muted playsinline>
@@ -174,15 +154,8 @@
                 </div>
                 <div class="col-lg-5">
                     <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">CGI & Superimpose</h3>
-                    <h1 class="display-4 mb-3">See your <span class="text-primary">Vision</span><br>In <span class="text-primary">Motion</span> </h1>
-                    <p>Our Walkthrough videos present the quality materials, intelligent layout, and overall aesthetic that will define your environment.
-                    <br>
-                    <br>
-                    Observe the considered use of textures, the warmth of natural stone, the sophistication of polished metal, the comfort of luxurious fabrics, all expertly rendered to evoke a sense of premium quality and refined elegance. The careful placement of furniture and accessories highlights the design's functionality and flow, creating a space that is both beautiful and practical.
-                    <br>
-                    <br>
-                    Beyond the visual elements, the rendering communicates a commitment to sophisticated design and a thoughtful approach to creating an environment that enhances productivity, relaxation, or lifestyle. It’s a detailed preview that allows you to fully appreciate the design's impact and quality.
-                    </p>
+                    <h1 class="display-4 mb-3">Unveil the <span class="text-primary">Extraordinary</span></h1>
+                    <p>Elevate your project with our captivating CGI and superimposed visuals. Witness your design come to life through photorealistic renderings that transport you into the heart of the space. These immersive previews empower you to fully experience the functionality, flow, and transformative impact of your vision, long before the first brick is laid.</p>
                 </div>
             </div>
         </div>
