--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
                 <div class="carousel-item position-relative active" style="height: 100vh; min-height: 400px;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-2" style="max-width: 900px;">
-                            <h3 class="display-3 font-secondary text-white mb-4">Your Property<br>Beautifully Marketed</h3>
-                            <a class="btn btn-light font-weight-bold py-3 px-5 mt-2 btn-scroll" href="#contact">Get A Quote</a>
+                            <h3 class="display-3 font-secondary text-white mb-4">Your Property<br>Beautifully Marketed</h6>
+                            <!-- <h3 class="display-5 text-white mb-4">Projects Done: <span class="count-up" data-target="50" >0</span></h3>
+                            <br> -->
+                            <a class="btn btn-light font-weight-bold py-3 px-5 mt-2 btn-scroll count-up" data-target="50" href="#contact">Projects Done: </a>
                       </div>
                     </div>
                 </div>
@@ -455,7 +457,7 @@
 
 
     <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/waypoints/waypoints.min.js"></script>
