--- a/webar-brochure/index.html
+++ b/webar-brochure/index.html
@@ -83,10 +83,11 @@
                 <div class="col-lg-5">
                     <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">WebAR Brochure</h3>
                     <h1 class="display-4 mb-3">Bring Your Brochure<br>to <span class="text-primary">Life</span></h1>
-                    <p>Tired of static brochures that fail to truly capture the essence of your listings? Our innovative WebAR Brochures revolutionize the way you present your properties, transforming a simple print material into a dynamic, immersive experience. Simply scan the QR code on your brochure with your smartphone or tablet, and you’ll instantly step inside, virtually! But it’s more than just visuals – our WebAR technology offers a truly engaging experience. Unlike traditional brochures, our WebAR experience is constantly evolving, allowing you to provide potential buyers with the most up-to-date information and a richer, more memorable presentation
+                    <p>Our innovative WebAR Brochures transform static print materials into dynamic, immersive experiences. Simply scan the QR code to instantly step inside your property virtually.
                     <br>
                     <h3 class="text-primary">It’s not just a brochure, it’s a doorway to your property</h3>
                     </p>
+                    <br>
                     <a class="btn btn-primary font-weight-bold btn-scroll py-3 px-5 mt-2" type="button" href="#service">Explore Features</a>
                 </div>
             </div>
@@ -98,10 +99,7 @@
                 <div class="col-lg-5">
                     <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Don't just look - Do</h3>
                     <h1 class="display-4 mb-3">Imagination meets<br><span class="text-primary">Reality</span> with <span class="text-primary">Your Touch</span></h1>
-                    <p>WebAR isn’t just about viewing 3D models – it’s about <span class="text-primary"> interacting</span> with them in a way that feels incredibly immersive. Unlike traditional 3D viewing, WebAR allows you to directly manipulate and engage with the digital object as if it were physically present in your space. You can rotate it, zoom in to examine details, trigger animations, and even change its color or texture. This interactivity is achieved through our very light weight WebAR system, which creates a seamless bridge between your browser and the virtual world.
-                    <br>
-                    <br>
-                    It transforms a passive viewing experience into an active exploration, fundamentally changing how you engage with 3D content online. Fostering a sense of agency and presence that was previously only possible with dedicated AR or VR headsets</p>
+                    <p>WebAR goes beyond passive viewing, allowing you to directly engage with digital objects as if they were physically present. With our lightweight WebAR system, you can rotate, zoom, trigger animations, and even change the color or texture of 3D models, transforming a simple viewing experience into an active exploration. This interactivity fosters a sense of agency and presence, blurring the line between the virtual and the real, and bringing your imagination to life with a simple touch</p>
                 </div>
                 <div class="col-lg-7">
                     <video class="content-video w-100 h-100" autoplay loop muted playsinline>
@@ -120,20 +118,7 @@
                 <div class="col-lg-5">
                     <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">AR at your Fingertips</h3>
                     <h1 class="display-4 mb-3">Experience the Future <span class="text-primary">Everywhere</span></h1>
-                    <p>One of the most significant advantages of WebAR is its unparalleled accessibility. Unlike native AR apps which often require specific operating systems and device models, WebAR experiences are designed to work seamlessly across virtually any device with a modern web browser. The experience adapts intelligently to your platform whether it’s a smartphone running iOS or Android, a tablet on Windows, macOS, or ChromeOS, or even a laptop with Safari or Firefox. This means:
-                    <br>
-                    <ul>
-                        <li>
-                            No complicated downloads
-                        </li>
-                        <li>
-                            No app store approvals
-                        </li>
-                        <li>
-                            No compatibility headaches
-                        </li>
-                    </ul>
-                    Essentially, WebAR breaks down the barriers between digital and physical worlds, offering a unified, accessible experience wherever you are – truly democratizing access to immersive augmented reality.</p>
+                    <p>One of the biggest advantages of WebAR is its unparalleled accessibility. Unlike native AR apps, WebAR experiences work seamlessly across any device with a modern web browser, adapting intelligently to your platform. This means no complicated downloads, app store approvals, or compatibility issues, democratizing access to immersive augmented reality</p>
                 </div>
             </div>
         </div>
@@ -144,7 +129,7 @@
                 <div class="col-lg-5">
                     <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Easy to Share</h3>
                     <h1 class="display-4 mb-3">Increased <span class="text-primary">Marketing Opportunities</span></h1>
-                    <p>Beyond the immersive experience, WebAR unlock a powerful marketing advantage. With a simple web link, you can instantly share the tour with your network, clients, colleagues, and potential buyers, eliminating the need for cumbersome email attachments or lengthy video uploads. This frictionless sharing dramatically increases visibility, expands your reach, and transforms your property listing into a dynamic, easily-distributable asset, fueling a vibrant wave of interest and accelerating the sales process</p>
+                    <p>Our virtual tours provide a powerful marketing advantage - a simple web link allows you to instantly share the immersive experience with your network, clients, colleagues, and potential buyers. This frictionless sharing dramatically increases visibility, expands your reach, and transforms your property listing into a dynamic, easily-distributable asset, fueling interest and accelerating the sales process</p>
                 </div>
                 <div class="col-lg-7">
                     <video class="content-video w-100 h-100" autoplay loop muted playsinline>
