optimize images and services section

--- a/3d-cad-services/index.html
+++ b/3d-cad-services/index.html
@@ -45,6 +45,8 @@
                 <a href="#exterior" class="nav-item nav-link">Exterior</a>
                 <a href="#walkthrough" class="nav-item nav-link">Walkthrough</a>
                 <a href="#locationav" class="nav-item nav-link">Location A/V</a>
+                <a href="#cgi" class="nav-item nav-link">CGI</a>
+
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
         </div>
@@ -149,7 +151,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-7">
                     <video class="content-video w-100 h-100" autoplay loop muted playsinline>
-                        <source src="../video/Walkthrough.mp4" type="video/mp4">
+                        <source src="../video/cgi.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="col-lg-5">
