--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <h3 class="display-3 font-secondary text-white mb-4">Your Property<br>Beautifully Marketed</h6>
                             <!-- <h3 class="display-5 text-white mb-4">Projects Done: <span class="count-up" data-target="50" >0</span></h3>
                             <br> -->
-                            <a class="btn btn-light font-weight-bold py-3 px-5 mt-2 btn-scroll count-up" data-target="50" href="#contact">Projects Done: </a>
+                            <a class="btn btn-light font-weight-bold py-3 px-5 mt-2 btn-scroll count-up" data-target="50" href="#contact" style="font-size: 1.2rem; width: 18rem;">Projects Done: </a>
                       </div>
                     </div>
                 </div>
@@ -142,7 +142,7 @@
                 <div class="col-lg-3 mb-3">
                     <div class="product-item mb-2">
                         <div class="project-item">
-                            <img class="img-fluid" src="../img/vr.png" alt="">
+                            <img class="img-fluid" src="../img/vr.webp" alt="">
                             <a class="btn btn-project-features" href="/virtual-tour">
                                 <p>Navigate seamlessly in an interactive, 360°-degree virtual experience to get a fully immersive sense of the space<br><br><span class="info-span">Click to Know More</span></p>
                             </a>
@@ -155,7 +155,7 @@
                 <div class="col-lg-3 mb-3">
                     <div class="product-item mb-2">
                         <div class="project-item">
-                            <img class="img-fluid" src="img/aerial.jpg" alt="">
+                            <img class="img-fluid" src="img/aerial.webp" alt="">
                             <a class="btn btn-project-features" href="/aerial-tour">
                                 <p>Soar over landmarks, cityscapes, and natural landscapes for an immersive, bird's-eye perspectivespace<br><br><span class="info-span">Click to Know More</span></p>
                             </a>
@@ -168,7 +168,7 @@
                 <div class="col-lg-3 mb-3">
                     <div class="product-item mb-2">
                         <div class="project-item">
-                            <img class="img-fluid" src="img/webar.jpg" alt="">
+                            <img class="img-fluid" src="img/webar.webp" alt="">
                             <a class="btn btn-project-features"href="/webar-brochure">
                                 <p>Bring your brochure to life with immersive our ML based Augmented Reality Solutionspace<br><br><span class="info-span">Click to Know More</span></p>
                             </a>
@@ -181,9 +181,9 @@
                 <div class="col-lg-3 mb-3">
                     <div class="product-item mb-2">
                         <div class="project-item">
-                            <img class="img-fluid" src="img/3d_services.jpg" alt="">
+                            <img class="img-fluid" src="img/interior_design.webp" alt="">
                             <a class="btn btn-project-features" href="/3d-cad-services#interior">
-                                <p>From 3D modeling, Location A/V and rendering to virtual tours, we bring your ideas to life in stunning detailspace<br><br><span class="info-span">Click to Know More</span></p>
+                                <p>Immersive interior renderings that bring your space to life and elevate your design<br><br><span class="info-span">Click to Know More</span></p>
                             </a>
                         </div>
                         <div class="bg-secondary text-center p-4">
@@ -194,9 +194,9 @@
                 <div class="col-lg-3 mb-3">
                     <div class="product-item mb-2">
                         <div class="project-item">
-                            <img class="img-fluid" src="img/3d_services.jpg" alt="">
+                            <img class="img-fluid" src="img/exterior_design.webp" alt="">
                             <a class="btn btn-project-features" href="/3d-cad-services#exterior">
-                                <p>From 3D modeling, Location A/V and rendering to virtual tours, we bring your ideas to life in stunning detailspace<br><br><span class="info-span">Click to Know More</span></p>
+                                <p>From initial concept to breathtaking visualisation, we deliver exterior renderings that elevate your design<br><br><span class="info-span">Click to Know More</span></p>
                             </a>
                         </div>
                         <div class="bg-secondary text-center p-4">
@@ -207,9 +207,9 @@
                 <div class="col-lg-3 mb-3">
                     <div class="product-item mb-2">
                         <div class="project-item">
-                            <img class="img-fluid" src="img/3d_services.jpg" alt="">
+                            <img class="img-fluid" src="img/walkthrough.webp" alt="">
                             <a class="btn btn-project-features" href="/3d-cad-services#walkthrough">
-                                <p>From 3D modeling, Location A/V and rendering to virtual tours, we bring your ideas to life in stunning detailspace<br><br><span class="info-span">Click to Know More</span></p>
+                                <p>Don’t just see it, feel it. Delivering immersive walkthrough videos that bring your design to life<br><br><span class="info-span">Click to Know More</span></p>
                             </a>
                         </div>
                         <div class="bg-secondary text-center p-4">
@@ -220,9 +220,9 @@
                 <div class="col-lg-3 mb-3">
                     <div class="product-item mb-2">
                         <div class="project-item">
-                            <img class="img-fluid" src="img/3d_services.jpg" alt="">
+                            <img class="img-fluid" src="img/locationav.webp" alt="">
                             <a class="btn btn-project-features" href="/3d-cad-services#locationav">
-                                <p>From 3D modeling, Location A/V and rendering to virtual tours, we bring your ideas to life in stunning detailspace<br><br><span class="info-span">Click to Know More</span></p>
+                                <p>We visualize the sonic landscape, creating immersive location A/V for unparalleled spatial design.<br><br><span class="info-span">Click to Know More</span></p>
                             </a>
                         </div>
                         <div class="bg-secondary text-center p-4">
@@ -233,9 +233,9 @@
                 <div class="col-lg-3 mb-3">
                     <div class="product-item mb-2">
                         <div class="project-item">
-                            <img class="img-fluid" src="img/3d_services.jpg" alt="">
+                            <img class="img-fluid" src="img/cgi.webp" alt="">
                             <a class="btn btn-project-features" href="/3d-cad-services#cgi">
-                                <p>From 3D modeling, Location A/V and rendering to virtual tours, we bring your ideas to life in stunning detailspace<br><br><span class="info-span">Click to Know More</span></p>
+                                <p>Bringing your designs to life with photorealistic CGI and superimpose, bridging the gap between concept and creation.<br><br><span class="info-span">Click to Know More</span></p>
                             </a>
                         </div>
                         <div class="bg-secondary text-center p-4">
@@ -257,50 +257,50 @@
         </div>
         <div class="owl-carousel gallery-carousel">
             <div class="project-item">
-                <img class="img-fluid w-100" src="img/ambit.png" alt="">
-                <a class="btn btn-project" href="img/ambit.png" data-toggle="modal" data-target="#projectModal" onclick="loadIframe(src='//storage.net-fs.com/hosting/8311954/0/', name='Ambit - Primoris')">
+                <img class="img-fluid w-100" src="img/ambit.webp" alt="">
+                <a class="btn btn-project" href="img/ambit.webp" data-toggle="modal" data-target="#projectModal" onclick="loadIframe(src='//storage.net-fs.com/hosting/8311954/0/', name='Ambit - Primoris')">
                     <!-- <i class="fa fa-2x fa-plus text-white"></i> -->
                     <p>AMBIT PRIMORIS<br><span class="info-span">Interactive Virtual Tour</span></p>
                 </a>
             </div>
             <div class="project-item">
-                <img class="img-fluid w-100" src="img/rajshree.png" alt="">
-                <a class="btn btn-project" href="img/rajshree.png" data-toggle="modal" data-target="#projectModal" onclick="loadIframe(src='//storage.net-fs.com/hosting/8311954/1/', name='Rajshree - Aranya Heights')">
+                <img class="img-fluid w-100" src="img/rajshree.webp" alt="">
+                <a class="btn btn-project" href="img/rajshree.webp" data-toggle="modal" data-target="#projectModal" onclick="loadIframe(src='//storage.net-fs.com/hosting/8311954/1/', name='Rajshree - Aranya Heights')">
                     <!-- <i class="fa fa-2x fa-plus text-white"></i> -->
                     <p>RAJSHREE ARANYA<br><span class="info-span">Aerial 360° Tour</span></p>
                 </a>
             </div>
             <div class="project-item">
-                <img class="img-fluid w-100" src="img/lotus.png" alt="">
-                <a class="btn btn-project" href="img/lotus.png" data-toggle="modal" data-target="#projectModal" onclick="loadIframe(src='//lotus-drone-view.netlify.app/', name='Lotus Developers')">
+                <img class="img-fluid w-100" src="img/lotus.webp" alt="">
+                <a class="btn btn-project" href="img/lotus.webp" data-toggle="modal" data-target="#projectModal" onclick="loadIframe(src='//lotus-drone-view.netlify.app/', name='Lotus Developers')">
                     <!-- <i class="fa fa-2x fa-plus text-white"></i> -->
                     <p>LOTUS DEVELOPERS<br><span class="info-span">Aerial 360° Tour</span></p>
                 </a>
             </div>
             <div class="project-item">
-                <img class="img-fluid w-100" src="img/pebble.png" alt="">
-                <a class="btn btn-project" href="img/pebble.png" data-toggle="modal" data-target="#projectModal" onclick="loadIframe(src='//storage.net-fs.com/hosting/8277896/1/', name='Pebble House')">
+                <img class="img-fluid w-100" src="img/pebble.webp" alt="">
+                <a class="btn btn-project" href="img/pebble.webp" data-toggle="modal" data-target="#projectModal" onclick="loadIframe(src='//storage.net-fs.com/hosting/8277896/1/', name='Pebble House')">
                     <!-- <i class="fa fa-2x fa-plus text-white"></i> -->
                     <p>THE PEBBLE HOUSE<br><span class="info-span">Virtual Tour</span></p>
                 </a>
             </div>
             <div class="project-item">
-                <img class="img-fluid w-100" src="img/anmol.png" alt="">
-                <a class="btn btn-project" href="img/anmol.png" data-toggle="modal" data-target="#projectModal" onclick="loadIframe(src='//storage.net-fs.com/hosting/8277896/3/', name='Anmol Residency')">
+                <img class="img-fluid w-100" src="img/anmol.webp" alt="">
+                <a class="btn btn-project" href="img/anmol.webp" data-toggle="modal" data-target="#projectModal" onclick="loadIframe(src='//storage.net-fs.com/hosting/8277896/3/', name='Anmol Residency')">
                     <!-- <i class="fa fa-2x fa-plus text-white"></i> -->
                     <p>ANMOL RESIDENCY<br><span class="info-span">Interactive Virtual Tour</span></p>
                 </a>
             </div>
             <div class="project-item">
-                <img class="img-fluid w-100" src="img/nyshaa.png" alt="">
-                <a class="btn btn-project" href="img/nyshaa.png" data-toggle="modal" data-target="#projectModal" onclick="loadIframe(src='//nyshaa-space-builder.netlify.app/', name='Nyshaa Space')">
+                <img class="img-fluid w-100" src="img/nyshaa.webp" alt="">
+                <a class="btn btn-project" href="img/nyshaa.webp" data-toggle="modal" data-target="#projectModal" onclick="loadIframe(src='//nyshaa-space-builder.netlify.app/', name='Nyshaa Space')">
                     <!-- <i class="fa fa-2x fa-plus text-white"></i> -->
                     <p>NYSHAA SPACE<br><span class="info-span">Aerial 360° Tour</span></p>
                 </a>
             </div>
             <div class="project-item">
-                <img class="img-fluid w-100" src="img/nexome.png" alt="">
-                <a class="btn btn-project" href="img/nexome.png" data-toggle="modal" data-target="#projectModal" onclick="loadIframe(src='//storage.net-fs.com/hosting/8277896/2/', name='Nexome - Altava')">
+                <img class="img-fluid w-100" src="img/nexome.webp" alt="">
+                <a class="btn btn-project" href="img/nexome.webp" data-toggle="modal" data-target="#projectModal" onclick="loadIframe(src='//storage.net-fs.com/hosting/8277896/2/', name='Nexome - Altava')">
                     <!-- <i class="fa fa-2x fa-plus text-white"></i> -->
                     <p>NEXOME ALTAVA<br><span class="info-span">Virtual Tour</span></p>
                 </a>
